--- a/NewsApp/.swiftlint.yml
+++ b/NewsApp/.swiftlint.yml
@@ -2,9 +2,10 @@ disabled_rules:
   - colon
   - comma
   - control_statement
+  - trailing_whitespace
 opt_in_rules:
   - empty_count
-  - missing_docs
+#  - missing_docs
 excluded:
   - Carthage
   - Pods
