--- a/NewsApp/.swiftlint.yml
+++ b/NewsApp/.swiftlint.yml
@@ -2,7 +2,7 @@ disabled_rules:
   - colon
   - comma
   - control_statement
-  - trailing_whitespace
+#  - trailing_whitespace
 opt_in_rules:
   - empty_count
 #  - missing_docs
